welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:41: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime41.MethodsDogHouse'
	override def run() {
                     ^